--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,78 @@
+a {
+  /* border: solid 3px black; */
+  font-size: 150%
+  padding: 10px;
+  margin: 10px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+header {
+  border: solid 3px black; 
+  padding: 5px;
+  margin: 40px;
+  background-image: url('../img/IMG_0988.jpeg');
+  background-size: cover;
+  border-radius: 10px;
+}
+
+header h3 {
+  color: lightseagreen;
+  text-align: center;
+}
+
+header h4 {
+  text-align: center;
+  font-family: "Gill Sans", sans-serif;
+}
+
+header h1 {
+  font-family: "Gill Sans", sans-serif;
+}
+
+nav {
+  /* border: solid 3px black; */
+  font-family: "Gill Sans", sans-serif;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  /* width: 2px; */
+}
+
+article {
+  border: solid 3px black;
+  border-radius: 10px;
+  padding: 40px;
+  margin: 40px;
+  background-image: url('../img/IMG_0988.jpeg');
+  background-size: cover;
+  font-family: "Gill Sans", sans-serif;
+}
+
 h1 {
+  
   text-align: center;
   color: black;
-  background-color: white;
+  /*background-color: white;*/
 }
-h3 {
-  color: lightseagreen;
-}
+
 h4 {
   color: black;
 }
+
+img {
+  border-radius: 10px;
+}
+
 body {
-    background-image: url('../img/IMG_0988.jpeg');
-    background-size: cover;
+    /*background-image: url('../img/IMG_0988.jpeg');
+    background-size: cover;*/
+    background-color: whitesmoke;
 }
 p {
   color: black;
