--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+html {
+    scroll-behavior: smooth;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .marble {
+    background-image: url('./img/IMG_0988.jpeg');
+    background-size: cover;
   }
-  to {
-    transform: rotate(360deg);
+  .gill {
+    font-family: "Gill Sans", sans-serif;
   }
-}
+  .edge {
+    /*border-radius: 10px;*/
+    border: top 1px grey;
+    border: left 1px grey;
+    border: right 1px grey;
+  }
