--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,38 @@
 html {
-    scroll-behavior: smooth;
-  }
-  .marble {
-    background-image: url('./img/IMG_0988.jpeg');
+  scroll-behavior: smooth;
+}
+
+.marble {
+  /* background-image: url('./img/IMG_0988.jpeg');
+  background-size: cover; */
+}
+
+.gill {
+  font-family: "Gill Sans", sans-serif;
+}
+
+.edge {
+  /*border-radius: 10px;*/
+  border: top 1px grey;
+  border: left 1px grey;
+  border: right 1px grey;
+}
+
+/* .resume {
+    background-image: url('./img/Joe_Passafiume_Resume.jpg');
     background-size: cover;
-  }
-  .gill {
-    font-family: "Gill Sans", sans-serif;
-  }
-  .edge {
-    /*border-radius: 10px;*/
-    border: top 1px grey;
-    border: left 1px grey;
-    border: right 1px grey;
-  }
+  } */
+
+.background {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#a7cfdf+0,23538a+100;Blue+3d+%238 */
+  /* background: rgb(167, 207, 223); */
+  /* Old browsers */
+  /* background: -moz-linear-gradient(top, rgba(167, 207, 223, 1) 0%, rgba(35, 83, 138, 1) 100%); */
+  /* FF3.6-15 */
+  /* background: -webkit-linear-gradient(top, rgba(167, 207, 223, 1) 0%, rgba(35, 83, 138, 1) 100%); */
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(167, 207, 223, 1) 0%, rgba(35, 83, 138, 1) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a', GradientType=0); */
+  /* IE6-9 */
+}
